[gd_scene load_steps=4 format=3 uid="uid://b8rl3cdmen8p2"]

[ext_resource type="Texture2D" uid="uid://c80vnyxnmukwl" path="res://zMINIGAMES/Jogo das Perguntas/assets/quests.png" id="1_xi35t"]
[ext_resource type="Script" uid="uid://8oyx18sdvm4o" path="res://zMINIGAMES/Jogo das Perguntas/scripts/nextQuestion.gd" id="2_vmoxj"]
[ext_resource type="Script" uid="uid://b7vcb4beisxnu" path="res://zMINIGAMES/Jogo das Perguntas/scripts/backToMenuQ2.gd" id="2_xi35t"]

[node name="Quests" type="Area2D"]

[node name="Back" type="Sprite2D" parent="."]
position = Vector2(576, 324)
scale = Vector2(0.75, 0.632813)
texture = ExtResource("1_xi35t")

[node name="2Button" type="Button" parent="."]
offset_left = 210.0
offset_top = 188.0
offset_right = 510.0
offset_bottom = 288.0
text = "A) Errada"
script = ExtResource("2_xi35t")

[node name="2Button2" type="Button" parent="."]
offset_left = 545.0
offset_top = 188.0
offset_right = 845.0
offset_bottom = 288.0
text = "B) Errada"
script = ExtResource("2_xi35t")

[node name="2Button3" type="Button" parent="."]
offset_left = 210.0
offset_top = 338.0
offset_right = 510.0
offset_bottom = 438.0
text = "C) Certa"
script = ExtResource("2_vmoxj")

[node name="2Button4" type="Button" parent="."]
offset_left = 545.0
offset_top = 338.0
offset_right = 845.0
offset_bottom = 438.0
text = "D) Errada"
script = ExtResource("2_xi35t")

[node name="Label" type="Label" parent="."]
offset_left = 202.0
offset_top = 60.0
offset_right = 853.0
offset_bottom = 180.0
theme_override_font_sizes/font_size = 48
text = "ESCREVA AQUI A PERGUNTA"

[connection signal="pressed" from="2Button" to="2Button" method="_on_pressed"]
[connection signal="pressed" from="2Button2" to="2Button2" method="_on_button_2_pressed"]
[connection signal="pressed" from="2Button3" to="2Button3" method="_on_button_3_pressed"]
[connection signal="pressed" from="2Button4" to="2Button4" method="_on_button_4_pressed"]
